name:                diet-tweet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/diet-tweet#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Tweet
  build-depends:       base >= 4.7 && < 5
                     , authenticate-oauth
                     , text
                     , bytestring
                     , base64-bytestring
                     , http-conduit
                     , http-client
                     , time
                     , data-default-class
                     , lens
  default-language:    Haskell2010

executable diet-tweet-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diet-tweet
                     , authenticate-oauth
                     , text
                     , bytestring
                     , base64-bytestring
                     , http-conduit
                     , http-client
                     , time
                     , data-default-class
                     , lens
  default-language:    Haskell2010

test-suite diet-tweet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , diet-tweet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/diet-tweet
